tests/checker/fail/unknown_field_access.can
Birthday = String

User = Birthday * Username

Username = String

Unit => Program {
    User(Birthday("1990") * Username("alice")).Mystery.print()
}
